--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,36 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
 :root {
-    --dsct-color-bg-header-footer: #3C9AF0;
-    --dsct-color-bg-primary: #FFFFFF;
-    --dsct-color-bg-secondary:#C8C8C8;
+  --dsct-color-bg-header-footer: #3c9af0;
+  --dsct-color-bg-primary: #ffffff;
+  --dsct-color-bg-secondary: #c8c8c8;
 
-    --dsct-color-font-primary: #FFFFFF;
-    --dsct-color-font-secondary: #5E5E5E;
-    --dsct-color-font-tertiary: #3C9AF0;
-  }
-  
-  * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: "Poppins", sans-serif;
-  }
-  
-  a,
-  a:hover {
-    text-decoration: none;
-    color: unset;
-  }
+  --dsct-color-font-primary: #ffffff;
+  --dsct-color-font-secondary: #5e5e5e;
+  --dsct-color-font-tertiary: #3c9af0;
 
-  header, footer{
-    background-color: var(--dsct-color-bg-header-footer);
-    color: var(--dsct-color-font-primary);
-    height: 70px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  --dsct-color-border: #3c9af0;
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+a,
+a:hover {
+  text-decoration: none;
+  color: unset;
+}
+
+header,
+footer {
+  background-color: var(--dsct-color-bg-header-footer);
+  color: var(--dsct-color-font-primary);
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
